[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "liyutian"}
]
license = {text = "1.0.0"}
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "pdfplumber (>=0.11.7,<0.12.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "reportlab (>=4.4.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "aliyun"
# url = "https://pypi.tuna.tsinghua.edu.cn/simple"
url = "https://mirrors.aliyun.com/pypi/simple/"